--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,7 @@ six==1.15.0
 SoundFile==0.10.3.post1
 threadpoolctl==2.1.0
 toml==0.10.1
+tornado==6.1
+typed-ast==1.4.3
 urllib3==1.26.2
 wrapt==1.12.1
